@@ -1,6 +1,7 @@
 package nl.jixxed.eliteodysseymaterials.templates.horizons.menu;
 
 import javafx.collections.ListChangeListener;
+import javafx.css.PseudoClass;
 import javafx.scene.control.MenuItem;
 import javafx.scene.input.MouseEvent;
 import nl.jixxed.eliteodysseymaterials.builder.MenuItemBuilder;
@@ -30,22 +31,15 @@ public class AddToWishlistMenuButton extends DestroyableMenuButton implements De
 
     @Override
     public void initComponents() {
-        this.getStyleClass().add("recipe-wishlist-button");
+        this.getStyleClass().add("wishlist-button");
         this.addBinding(this.textProperty(), LocaleService.getStringBinding("blueprint.add.to.wishlist"));
         this.getItems().addAll(new ArrayList<>());
-        menuItemListChangeListener = c -> {
-            if (c.getList().size() <= 1) {
-                if (!this.getStyleClass().contains("hidden-menu-button")) {
-                    this.getStyleClass().add("hidden-menu-button");
-                }
-            } else {
-                this.getStyleClass().remove("hidden-menu-button");
-            }
-        };
+        menuItemListChangeListener = c ->
+                this.pseudoClassStateChanged(PseudoClass.getPseudoClass("hidden-menu"), c.getList().size() <= 1);
         this.getItems().addListener(menuItemListChangeListener);
         this.addEventBinding(this.onMouseClickedProperty(), event -> {
             if (this.getItems().size() == 1) {
-                this.getItems().get(0).fire();
+                this.getItems().getFirst().fire();
                 event.consume();
             }
         });
